--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -10,34 +11,22 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.We_learn"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name="itemDetail.TestPDF"
+            android:name="itemDetail.PDFWebViewActivity"
             android:exported="false" />
+
+
         <activity
             android:name="itemDetail.SubjectDetailPDF"
             android:exported="false" />
-<!--        <activity-->
-<!--            android:name=".SubjectDetail"-->
-<!--            android:exported="false" /> &lt;!&ndash; <activity &ndash;&gt;-->
-        <!-- android:name=".SignInActivity" -->
-        <!-- android:exported="true"> -->
-        <!-- <intent-filter> -->
-        <!-- <action android:name="android.intent.action.MAIN" /> -->
-        <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
-        <!-- </intent-filter> -->
-        <!-- </activity> -->
-        <!-- <activity -->
-        <!-- android:name=".SignUpActivity" -->
-        <!-- /> -->
-        <!-- <activity -->
-        <!-- android:name=".MainActivity" -->
-        <!-- > -->
-        <!-- </activity> -->
+
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
